# cmake_learning

./: .gitignore  README.md
hello/: CMakeLists.txt  License.txt
hello/src/: hello.py  helloConfig.h.in
onsyte/: CMakeLists.txt  README.md  postinst  postrm  preinst
